# MLB-Leaderboards

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: adapters.py  cache.py  config.py  db.py  fantasy.py  fetcher.py  main.py  scheduler.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ErrorBoundary.jsx  FilterBar.jsx  Leaderboard.jsx  LeaderboardTable.jsx  PercentileLegend.jsx  SchedulerStatus.jsx
frontend/src/utils/: format.js
tests/: conftest.py  test_api.py  test_db.py  test_fetcher.py  test_leaderboard.py  test_utils.py
